tests/NormalTests/paczka1/fuzzy1/14084925.err
Error in line 1: gtV4yoSa S929 33,2
Error in line 6: IKPnULkP A258 56,w
Error in line 7: Ye8ggNGW A748 49,9
Error in line 2: IKPnULkP S929 95,4
Error in line 30: iIP A748 55,4
